[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/UserInputPopup.gd" type="Script" id=2]

[node name="UserInputPopup" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -381.5
margin_top = -215.0
margin_right = 381.5
margin_bottom = 215.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 743.0
margin_bottom = 410.0
custom_constants/separation = 10

[node name="AboveText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 723.0
margin_bottom = 156.0
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "This is tutorial
How to use this
Thing!"
align = 1
valign = 2
autowrap = true

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 723.0
margin_bottom = 190.0
size_flags_vertical = 4
theme = ExtResource( 1 )

[node name="WarningText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 723.0
margin_bottom = 356.0
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.737255, 0, 0, 1 )
text = "And this is a warning that it didn't work"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 723.0
margin_bottom = 390.0
custom_constants/separation = 40

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 341.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Confirm"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 381.0
margin_right = 723.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Cancel"

[connection signal="text_entered" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
